--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -55,6 +55,17 @@
             <property name="title" translatable="yes">Playback</property>
             <child>
               <object class="AdwActionRow">
+                <property name="title" translatable="yes">Use ReplayGain to normalize volume</property>
+                <property name="activatable_widget">replaygain_btn</property>
+                <child>
+                  <object class="GtkSwitch" id="replaygain_btn">
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
                 <property name="title" translatable="yes">Use pipewire audio sink</property>
                 <property name="subtitle" translatable="yes">Experimental</property>
                 <property name="activatable_widget">pipewire_btn</property>
