--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -166,7 +166,8 @@
                             <child>
                               <object class="GtkLabel" id="song_artist">
                                 <property name="ellipsize">end</property>
-                                <property name="margin_top">4</property>
+                                <property name="halign">center</property>
+                                <property name="margin_top">5</property>
                                 <style>
                                   <class name="dim-label"/>
                                 </style>
@@ -175,6 +176,7 @@
                             <child>
                               <object class="GtkLabel" id="song_album">
                                 <property name="ellipsize">end</property>
+                                <property name="halign">center</property>
                                 <property name="margin_top">4</property>
                                 <style>
                                   <class name="dim-label"/>
