--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -157,6 +157,15 @@
                             <property name="margin_top">24</property>
                             <property name="height_request">80</property>
                             <child>
+                              <object class="GtkLabel" id="initial_label">
+                                <property name="halign">center</property>
+                                <property name="hexpand">false</property>
+                                <property name="lines">3</property>
+                                <property name="single_line_mode">false</property>
+                                <property name="width_request">272</property>
+                              </object>
+                            </child>
+                            <child>
                               <object class="GtkLabel" id="song_title">
                                 <property name="ellipsize">end</property>
                                 <style>
