--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -223,6 +223,12 @@
   <menu id="primary_menu">
     <section>
       <item>
+        <attribute name="label" translatable="yes">_Reload List</attribute>
+        <attribute name="action">app.reload-list</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
         <attribute name="label" translatable="yes">_Preferences</attribute>
         <attribute name="action">app.preferences</attribute>
       </item>
