--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -40,6 +40,7 @@
             <child>
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">Load thumbnails for non-local files</property>
+                <property name="subtitle" translatable="yes">May cause slowdowns and excess network usage</property>
                 <property name="activatable_widget">thumbnail_btn</property>
                 <child>
                   <object class="GtkSwitch" id="thumbnail_btn">
