--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -214,7 +214,7 @@
         <attribute name="action">app.export</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Show In Files</attribute>
+        <attribute name="label" translatable="yes">_Show in Files</attribute>
         <attribute name="action">app.opendir</attribute>
       </item>
     </section>
