--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -237,7 +237,7 @@
         <attribute name="action">win.show-help-overlay</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_About G4Music</attribute>
+        <attribute name="label" translatable="yes">_About</attribute>
         <attribute name="action">app.about</attribute>
       </item>
     </section>
