--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -246,34 +246,29 @@
   <menu id="sort_menu">
     <section>
       <item>
-        <attribute name="icon">media-optical-cd-audio-symbolic</attribute>
         <attribute name="label" translatable="yes">By Album</attribute>
         <attribute name="action">app.sort</attribute>
-        <attribute name="target" type="u">0</attribute>
+        <attribute name="target">0</attribute>
       </item>
       <item>
-        <attribute name="icon">system-users-symbolic</attribute>
         <attribute name="label" translatable="yes">By Artist</attribute>
         <attribute name="action">app.sort</attribute>
-        <attribute name="target" type="u">1</attribute>
+        <attribute name="target">1</attribute>
       </item>
       <item>
-        <attribute name="icon">audio-x-generic-symbolic</attribute>
         <attribute name="label" translatable="yes">By Title</attribute>
         <attribute name="action">app.sort</attribute>
-        <attribute name="target" type="u">2</attribute>
+        <attribute name="target">2</attribute>
       </item>
       <item>
-        <attribute name="icon-name">document-open-recent-symbolic</attribute>
         <attribute name="label" translatable="yes">By Date</attribute>
         <attribute name="action">app.sort</attribute>
-        <attribute name="target" type="u">3</attribute>
+        <attribute name="target">3</attribute>
       </item>
       <item>
-        <attribute name="icon">media-playlist-shuffle-symbolic</attribute>
         <attribute name="label" translatable="yes">Shuffle</attribute>
         <attribute name="action">app.sort</attribute>
-        <attribute name="target" type="u">4</attribute>
+        <attribute name="target">4</attribute>
       </item>
     </section>
   </menu>
