--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk" version="4.0"/>
-  <template class="MusicPreferencesWindow" parent="AdwPreferencesWindow">
+  <template class="G4PreferencesWindow" parent="AdwPreferencesWindow">
     <property name="default-width">480</property>
     <property name="search-enabled">false</property>
     <property name="modal">true</property>
