--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -2,14 +2,16 @@
 <interface>
   <requires lib="gtk" version="4.0"/>
   <template class="G4PreferencesWindow" parent="AdwPreferencesWindow">
-    <property name="default-width">480</property>
+    <property name="default-width">500</property>
+    <property name="default-height">400</property>
     <property name="search-enabled">false</property>
     <property name="modal">true</property>
     <child>
       <object class="AdwPreferencesPage">
+        <property name="icon-name">video-display-symbolic</property>
+        <property name="title" translatable="yes">Appearance</property>
         <child>
           <object class="AdwPreferencesGroup">
-            <property name="title" translatable="yes">Appearance</property>
             <child>
               <object class="AdwActionRow" id="dark_theme">
                 <property name="title" translatable="yes">Prefer dark theme</property>
@@ -39,9 +41,14 @@
             </child>
           </object>
         </child>
+      </object>
+    </child>
+    <child>
+      <object class="AdwPreferencesPage">
+        <property name="icon-name">folder-music-symbolic</property>
+        <property name="title" translatable="yes">Music Location</property>
         <child>
           <object class="AdwPreferencesGroup">
-            <property name="title" translatable="yes">Music Location</property>
             <child>
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">Load music from folder</property>
@@ -67,9 +74,14 @@
             </child>
           </object>
         </child>
+      </object>
+    </child>
+    <child>
+      <object class="AdwPreferencesPage">
+        <property name="icon-name">media-playback-start-symbolic</property>
+        <property name="title" translatable="yes">Playback</property>
         <child>
           <object class="AdwPreferencesGroup">
-            <property name="title" translatable="yes">Playback</property>
             <child>
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">Keep playing after window closed</property>
