--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -62,6 +62,17 @@
             </child>
             <child>
               <object class="AdwActionRow">
+                <property name="title" translatable="yes">Monitor local file changes</property>
+                <property name="activatable_widget">monitor_btn</property>
+                <child>
+                  <object class="GtkSwitch" id="monitor_btn">
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
                 <property name="title" translatable="yes">Load thumbnails for non-local files</property>
                 <property name="subtitle" translatable="yes">May cause slowdowns and excess network usage</property>
                 <property name="activatable_widget">thumbnail_btn</property>
