--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -2,16 +2,14 @@
 <interface>
   <requires lib="gtk" version="4.0"/>
   <template class="G4PreferencesWindow" parent="AdwPreferencesWindow">
-    <property name="default-width">500</property>
-    <property name="default-height">400</property>
+    <property name="default-width">480</property>
     <property name="search-enabled">false</property>
     <property name="modal">true</property>
     <child>
       <object class="AdwPreferencesPage">
-        <property name="icon-name">video-display-symbolic</property>
-        <property name="title" translatable="yes">Appearance</property>
         <child>
           <object class="AdwPreferencesGroup">
+            <property name="title" translatable="yes">General</property>
             <child>
               <object class="AdwActionRow" id="dark_theme">
                 <property name="title" translatable="yes">Prefer dark theme</property>
@@ -39,16 +37,22 @@
                 </child>
               </object>
             </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="title" translatable="yes">Keep playing after window closed</property>
+                <property name="activatable_widget">playbkgnd_btn</property>
+                <child>
+                  <object class="GtkSwitch" id="playbkgnd_btn">
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
           </object>
         </child>
-      </object>
-    </child>
-    <child>
-      <object class="AdwPreferencesPage">
-        <property name="icon-name">folder-music-symbolic</property>
-        <property name="title" translatable="yes">Music Location</property>
         <child>
           <object class="AdwPreferencesGroup">
+          <property name="title" translatable="yes">Music Location</property>
             <child>
               <object class="AdwActionRow">
                 <property name="title" translatable="yes">Load music from folder</property>
@@ -85,14 +89,9 @@
             </child>
           </object>
         </child>
-      </object>
-    </child>
-    <child>
-      <object class="AdwPreferencesPage">
-        <property name="icon-name">media-playback-start-symbolic</property>
-        <property name="title" translatable="yes">Playback</property>
         <child>
           <object class="AdwPreferencesGroup">
+          <property name="title" translatable="yes">Playback</property>
             <child>
               <object class="AdwExpanderRow" id="peak_row">
               	<property name="show_enable_switch">true</property>
@@ -117,17 +116,6 @@
                 <property name="activatable_widget">rotate_btn</property>
                 <child>
                   <object class="GtkSwitch" id="rotate_btn">
-                    <property name="valign">center</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="AdwActionRow">
-                <property name="title" translatable="yes">Keep playing after window closed</property>
-                <property name="activatable_widget">playbkgnd_btn</property>
-                <child>
-                  <object class="GtkSwitch" id="playbkgnd_btn">
                     <property name="valign">center</property>
                   </object>
                 </child>
