--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -136,6 +136,7 @@
                         <property name="margin_start">32</property>
                         <property name="margin_end">32</property>
                         <property name="margin_top">8</property>
+                        <property name="margin_bottom">32</property>
                         <child>
                           <object class="GtkImage" id="music_cover">
                             <property name="hexpand">true</property>
@@ -146,8 +147,8 @@
                         <child>
                           <object class="GtkBox">
                             <property name="orientation">vertical</property>
-                            <property name="valign">start</property>
-                            <property name="margin_top">24</property>
+                            <property name="valign">end</property>
+                            <property name="margin_top">39</property>
                             <property name="height_request">80</property>
                             <child>
                               <object class="GtkLabel" id="initial_label">
